public/games/doodle-jump/style.css
@import url(http://fonts.googleapis.com/css?family=Gloria+Hallelujah);

*{box-sizing: border-box;}

body {
  margin: 0; padding: 0;
  font-family: 'Gloria Hallelujah', cursive;
}

.container {
  height: 552px;
  width: 422px;
  position: relative;
  margin: 20px auto 0; 
  overflow: hidden;
}

canvas {
  height: 552px;
  width: 422px;
  display: block;
  background: url(http://i.imgur.com/Y0BMP.png) top left;
}

#scoreBoard {
  width: 420px;
  height: 50px;
  background: rgba(182, 200, 220, 0.7);
  position: absolute;
  top: -3px;
  left: 0;
  z-index: -1;  
  border-image: url(http://i.imgur.com/5BBsR.png) 100 5 round;
}

#scoreBoard p {
  font-size: 20px;
  padding: 0;
  line-height: 47px;
  margin: 0px 0 0 5px;
}

img {display: none}

#mainMenu, #gameOverMenu {
  height: 100%;
  width: 100%;
  text-align: center;
  position: absolute;
  top: 0;
  left: 0;
  z-index: 2;
}

#gameOverMenu {
  visibility: hidden;
}

h2, h3, h1 {font-weight: normal}
h1 {
  font-size: 60px; 
  color: #5a5816; 
  transform: rotate(-10deg);
  margin: 0px;
}

h3 {text-align: right; margin: -10px 20px 0 0; color: #5e96be}
h3 a {color: #5a5816}

.button {
  width: 105px;
  height: 31px;
  background: url(http://i.imgur.com/2WEhF.png) 0 0 no-repeat;
  display: block;
  color:  #000;
  font-size: 12px;
  line-height: 31px;
  text-decoration: none;
  position: absolute;
  left: 50%;
  bottom: 50px;
  margin-left: -53px;
}

.info {position: absolute; right: 20px; bottom: 00px; margin: 0; color: green}

.info .key {
  width: 16px;
  height: 16px;
  background: url(http://i.imgur.com/2WEhF.png) no-repeat;
  text-indent: -9999px;
  display: inline-block;
}

.info .key.left {background-position: -92px -621px;}
.info .key.right {background-position: -92px -641px;}

